@@ -27,12 +27,13 @@
 
  New features and improvements:
 
-   - 
+   - ofoTVAFormProperties: improve properties update.
 
  Bug fixes:
 
    - ofoBat: fix new record insertion.
    - ofoTVAForm: fix new record insertion.
+   - ofoTVAFormProperties: fix new record creation.
    - ofoTVARecord: fix new record insertion.
 
  Other changes:
